--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.5+1
+  flutter_riverpod: ^2.1.3
   flutter_web_data_table: ^1.0.0
   flutter_web_plugins:
     sdk: flutter
